--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <script src="graficos/main.js" type="module"></script>
     <script src="graficos/usuarios.js" type="module"></script>
     <script src="graficos/razoesGlobais.js" type="module"></script>
+    <script src="graficos/redesFavoritas.js" type="module"></script>
 </body>
 
 </html>
