--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <!-- <script src="https://cdn.plot.ly/plotly-2.27.0.min.js" charset="utf-8"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/plotly.js/2.29.1/plotly.min.js" integrity="sha512-qXXwcmVmWpyXDLSgJWB3xoH8IpGtzY2hDc4Ab9nQ9GsQsLRr8l+LDAsgqeQPAN4G6rhyh9LUfydj0f/49Uq3GQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="stylesheet" href="style.css">
-    <script src="graficos/common.js" type="module"></script>
+    <!-- <script src="graficos/common.js" type="module"></script>
     <script src="graficos/maisUsuarios.js" type="module"></script>
     <script src="graficos/usuarios.js" type="module"></script>
     <script src="graficos/razoesGlobais.js" type="module"></script>
-    <script src="graficos/redesFavoritas.js" type="module"></script>
+    <script src="graficos/redesFavoritas.js" type="module"></script> -->
     <title>Redes sociais</title>
 </head>
 
@@ -30,6 +30,7 @@
     <footer>
         <p>Desenvolvido por Gui Lima</p>
     </footer>   
+    <script src="graficos/main.js"></script>
 </body>
 
 </html>
